img responsive for meals under existing users view, fixed overflow prob

--- a/styles/style.css
+++ b/styles/style.css
@@ -209,6 +209,9 @@ font-size: normal;
 }
 .img-responsive {
     margin: 0 auto;
+    height: 500px;
+    width:300px;
+    overflow-x: auto;
 }
 
 /*-----------------------------------------------------------------------------------------------------*/
